--- a/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
@@ -9,8 +9,8 @@
     <ui:define name="page_body">
                 
           <p:tab id="cardTab" title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding"
-                         columnClasses="ui-grid-col-12 col-padding">
+            <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
+                         columnClasses="ui-grid-col-12">
                 <p:outputLabel value="#{bundle.Name}" />
                     <p:inputText id="postName" value="#{_bean.editedItem.name}" 
                                  styleClass="ui-grid-col-12 col-padding"
