--- a/escom-bpm-web/src/main/webapp/view/docs/docs-list.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docs-list.xhtml
@@ -4,7 +4,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <p:commandButton id="openDocBtn" actionListener="#{docsBean.onOpenSelectedItemCard()}" style="display: none;"> 
+    <p:commandButton id="openDocBtn" actionListener="#{docsBean.prepEditItem(_bean.selectedDoc)}" style="display: none;"> 
         <p:ajax event="dialogReturn" listener="#{_bean.onUpdateAfterCloseDocForm}"/>
     </p:commandButton>
     
@@ -20,42 +20,42 @@
         <p:ajax event="rowDblselect" listener="#{_bean.onRowDblClckOpen}"                                         
                 oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();"/>
 
-        <p:column style="width:20px; font-size: 90%;" sortBy="#{doc.iconName}">
+        <p:column width="16" sortBy="#{doc.iconName}">
             <p:graphicImage id="itemIcon" value="/resources/icon/#{doc.iconName}.png"/>  
         </p:column>
+        
+        <p:column width="16" sortBy="#{doc.state.currentState.name}">
+            <h:graphicImage id="iconDone" value="#{doc.state.currentState.icon}" title="#{stateBean.getBundleName(state.currentState)}"/>            
+        </p:column>
+        
         <p:column headerText="#{bundle.Number}" sortBy="#{doc.number}" >
             <h:outputText value="#{doc.regNumber}"/>
         </p:column>
+        
+        <p:column headerText="#{bundle.DateDoc}" sortBy="#{doc.dateDoc}">
+            <h:outputText value="#{doc.dateDoc}" >
+                <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
+            </h:outputText>
+        </p:column>
+        
+        <p:column headerText="#{bundle.DocTypes}" sortBy="#{doc.docType.name}">
+            <h:outputText value="#{doc.docType.name}" />
+        </p:column>
+        
         <p:column headerText="#{bundle.Name}" sortBy="#{doc.name}">
             <p:commandLink value="#{doc.name}" rendered="#{doc.getClass().getSimpleName()== 'Doc'}"
-                           actionListener="#{docsBean.setSelectedItem(doc)}"
+                           actionListener="#{_bean.setSelectedDoc(doc)}"
                            oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();"/>
-        </p:column>
-        
-        <p:column headerText="#{bundle.State}" sortBy="#{doc.state.name}">
-            <h:outputText  value="#{doc.state.name}" />
-        </p:column> 
-        
-        <p:column headerText="#{bundle.DateChange}" sortBy="#{doc.dateChange}">
-            <h:outputText value="#{doc.dateChange}" >
-                <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
-            </h:outputText>    
-        </p:column>
-        
-        <p:column headerText="#{bundle.AuthorChanges}" sortBy="#{doc.author.shortFIO}">
-            #{doc.author.shortFIO}
-        </p:column>
+        </p:column>                       
 
         <p:column headerText="#{bundle.Commands}" > 
             <p:splitButton  value="#{bundle.Open}" title="#{bundle.Open}"                                                   
-                            actionListener="#{_bean.setSelectedItem(doc)}"
+                            actionListener="#{_bean.setSelectedDoc(doc)}"
                             oncomplete="document.getElementById('#{_frm}:mainTabView:openDocBtn').click();">
                 <p:menuitem icon="ui-icon-zoomin" value="#{bundle.View}" title="#{bundle.View}"
                             process="@this"
                             disabled="#{doc.attache == null}"
-                            actionListener="#{docsBean.viewAttache(doc)}"/>
-                <p:menuitem icon="ui-icon-folder-open" value="#{bundle.ShowInFolder}" title="#{bundle.ShowInFolder}"
-                            url="#{sessionBean.onShowDocInFolder(doc)}" target="_blank"/>
+                            actionListener="#{docsBean.onViewMainAttache(doc)}"/>
                 <p:separator />
                 <p:menuitem icon="ui-icon-star" value="#{bundle.AddToFavorites}" title="#{bundle.AddToFavorites}"
                             process="@this"
